<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="86dp"
            android:layout_height="121dp"
            android:scaleX="1.6"
            android:scaleY="1.6"
            app:srcCompat="@drawable/logo"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_black"
            android:text="@string/menu_title"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/size_20sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_background">

        <ScrollView
            android:id="@+id/main_scrollView_stateDefault"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="36dp"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_textView_achievement"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textAllCaps="true"
                    android:text="@string/achievement"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_24sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/line"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <HorizontalScrollView
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/main_linearLayout_achievements"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"/>

                </HorizontalScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/line"
                    android:layout_marginBottom="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <TextView
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textAllCaps="true"
                    android:text="@string/quest"
                    android:textColor="@color/white"
                    android:layout_marginBottom="12dp"
                    android:textSize="@dimen/size_24sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/quest_description"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:justificationMode="inter_word"
                    android:textSize="@dimen/size_20sp" />
            </LinearLayout>

        </ScrollView>

        <Button
            style="?android:attr/borderlessButtonStyle"
            app:backgroundTint="@null"
            android:button="@null"
            android:id="@+id/main_button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Отсканировать QR код"
            android:textAllCaps="false"
            android:textColor="@drawable/button_text_color_selector"
            android:background="@drawable/button_selector"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="@dimen/size_18sp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="16dp"
            />

        <LinearLayout
            android:id="@+id/main_linearLayout_stateLoading"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:elevation="10dp"
                android:indeterminateTint="@color/white"
                android:scaleX="0.8"
                android:scaleY="0.8" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>